<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/plain_background"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_number_of_students"
            android:fontFamily="@font/kanit_regular"
            android:textSize="23sp"
            android:layout_margin="2dp"
            />
           <EditText
               android:id="@+id/totalNumStudentsET"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/number"
               android:fontFamily="@font/kanit_regular"
               android:textSize="20sp">

           </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_a"
                android:fontFamily="@font/kanit_regular"
                android:textSize="23sp"
                android:layout_margin="2dp"
                />
            <EditText
                android:id="@+id/grade1AET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade"
                android:fontFamily="@font/kanit_regular"
                android:textSize="20sp">

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_b"
                android:fontFamily="@font/kanit_regular"
                android:textSize="23sp"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/grade2BET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/grade"
                android:fontFamily="@font/kanit_regular"
                android:textSize="20sp">

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_c"
                android:fontFamily="@font/kanit_regular"
                android:textSize="23sp"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/grade3CET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/grade"
                android:fontFamily="@font/kanit_regular"
                android:textSize="20sp">

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_d"
                android:fontFamily="@font/kanit_regular"
                android:textSize="23sp"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/grade4DET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/grade"
                android:fontFamily="@font/kanit_regular"
                android:textSize="20sp">

            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_f"
                android:fontFamily="@font/kanit_regular"
                android:textSize="23sp"
                android:layout_margin="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/grade5EET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/grade"
                android:fontFamily="@font/kanit_regular"
                android:textSize="20sp">

            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:minHeight="50dp"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_gravity="center"
            android:text="@string/calculate">

        </Button>


    </LinearLayout>



</ScrollView>